<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/dark_blue"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/my_does"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/subtitle_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/my_does_desc"
            android:textAlignment="center"
            android:textColor="@color/less_blue"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/less_blue" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_does"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:listitem="@layout/item_does"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="16dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/end_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/no_does"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

</LinearLayout>